# Vuoden-Harmain-Sovellus

./: .coverage  .gitignore  README.md  fly.toml  pyproject.toml  schema.sql  sprintbacklog.md
.github/workflows/: main.yml
src/: AppLibrary.py  actions.py  citations.py  fly.toml  routes.py  users.py
src/static/: main.css
src/templates/: errors.html  frontpage.html  layout.html  modify_citation.html  register.html
src/tests/: citations.robot  resource.robot  user_test.py  users.robot
