[tool.poetry]
name = "vuoden-harmain-sovellus"
version = "0.1.0"
description = ""
authors = ["Vuoden-Harmain-Team"]
readme = "README.md"
packages = [{include = "vuoden_harmain_sovellus"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
robotframework = "^6.0.1"
coverage = "^6.5.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
